update osm attribution

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 	// Add basemaps
 	// basemap 1:
 	var osm_basemap = L.tileLayer('https://{s}.tile.openstreetmap.de/tiles/osmde/{z}/{x}/{y}.png', {
-		attribution: '<a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
+		attribution: '<a href="http://www.openstreetmap.org/copyright">© OpenStreetMap-Contributors</a>'
 	}).addTo(map);
 	
 
