--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Brain & body size</title>
+	<meta name="author" content="Christian Sommer">
 	
 	<link rel="stylesheet" href="css/leaflet.css">
 	<link rel="stylesheet" href="css/MarkerCluster.css">
@@ -41,7 +42,7 @@
 
 	// Create Leaflet map
 	var map = L.map('mapid').setView([28, 80], 3);
-	map.attributionControl.addAttribution('<a href="http://www.roceeh.net" target="_blank">ROCEEH</a>, Data: tba (M. Will), Map: CC-BY-SA 4.0 by <a href="https://github.com/sommergeo" target="_blank">Ch. Sommer</a> | <a href="https://thenounproject.com/search/?q=brain&creator=1145943&i=2805277" target="_blank">Brain</a> icon by Adrien Coquet and <a href="https://thenounproject.com/search/?q=man&i=347814" target="_blank">Body</a> icon by Brad Avison from the Noun Project');
+	map.attributionControl.addAttribution('<a href="http://www.roceeh.net" target="_blank">ROCEEH</a>, Data: tba (M. Will), Map: CC-BY-SA 4.0 by <a rel="author" href="https://github.com/sommergeo">Ch. Sommer</a> | <a href="https://thenounproject.com/search/?q=brain&creator=1145943&i=2805277" target="_blank">Brain</a> icon by Adrien Coquet and <a href="https://thenounproject.com/search/?q=man&i=347814" target="_blank">Body</a> icon by Brad Avison from the Noun Project');
 	
 	
 	// Add basemaps
