--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 	// Create Leaflet map
 	var map = L.map('mapid').setView([28, 80], 3);
-	map.attributionControl.addAttribution('<a href="http://www.roceeh.net" target="_blank">ROCEEH</a>, Data: tba (M. Will), Map: <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC-BY-SA 4.0</a> by <a rel="author" href="https://github.com/sommergeo">Ch. Sommer</a> at <a href="https://doi.org/10.5281/zenodo.3660414">DOI 10.5281/zenodo.3660414</a> | <a href="https://thenounproject.com/search/?q=brain&creator=1145943&i=2805277" target="_blank">Brain</a> icon by Adrien Coquet and <a href="https://thenounproject.com/search/?q=man&i=347814" target="_blank">Body</a> icon by Brad Avison from the Noun Project');
+	map.attributionControl.addAttribution('<a href="http://www.roceeh.net" target="_blank">ROCEEH</a>, Data: tba (M. Will), Map: <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC-BY-SA 4.0</a> by <a rel="author" href="https://www.sommergeo.com">Ch. Sommer</a> at <a href="https://doi.org/10.5281/zenodo.3660414">DOI 10.5281/zenodo.3660414</a> | <a href="https://thenounproject.com/search/?q=brain&creator=1145943&i=2805277" target="_blank">Brain</a> icon by Adrien Coquet and <a href="https://thenounproject.com/search/?q=man&i=347814" target="_blank">Body</a> icon by Brad Avison from the Noun Project');
 	
 	
 	// Add basemaps
