--- a/index.html
+++ b/index.html
@@ -59,7 +59,16 @@
 			"<br><b>Taxonomy: </b>"+ feature.properties['Taxonomy'] +
 			"<br><b>Age group: </b>"+ feature.properties['Age group'] +
 			"<br><b>Latitude: </b>"+ feature.properties['Y-coordina'] +
-			"<br><b>Longitude: </b>"+ feature.properties['X-coordina'];
+			"<br><b> Longitude: </b>"+ feature.properties['X-coordina'] +
+			//if(feature.properties.layer == "Body_size_data"){
+			//	return ("<br><b>Brain size: </b>"+ feature.properties['BodySize'] +" mm³");
+			//} else {
+			//	return ("<br><b>Body size size: </b>"+ feature.properties['BodySize'] +" cm");
+			//}+
+			"<br><b>Age: </b>"+ feature.properties['Age Myr']*1000+" kya" +
+			"<br><b>Dating method: </b>"+ feature.properties['Dating method*'] +
+			"<br><b>Source: </b>"+ feature.properties['Data source']
+			;
         layer.bindPopup(popupContent);
     }
 
@@ -167,6 +176,18 @@
                 interactive: true,
             };
                 }
+				else if (exp_Br9(context)) {
+                  return {
+                pane: 'pane_allfinds',
+        rotationAngle: 0.0,
+        rotationOrigin: 'center center',
+        icon: L.icon({
+            iconUrl: 'markers/noun_Brain_2805277.svg',
+            iconSize: [33, 33]
+        }),
+                interactive: true,
+            };
+                }
                 else if (exp_Bo1(context)) {
                   return {
                 pane: 'pane_allfinds',
@@ -259,6 +280,18 @@
         icon: L.icon({
             iconUrl: 'markers/noun_Man_347814.svg',
             iconSize: [30, 30]
+        }),
+                interactive: true,
+            };
+                }
+                else if (exp_Bo9(context)) {
+                  return {
+                pane: 'pane_allfinds',
+        rotationAngle: 0.0,
+        rotationOrigin: 'center center',
+        icon: L.icon({
+            iconUrl: 'markers/noun_Man_347814.svg',
+            iconSize: [33, 33]
         }),
                 interactive: true,
             };
@@ -362,7 +395,7 @@
 		var baseMaps = {};
 		var overlay = {'Middle Pleistocene Homo': cluster_MPH,
 			'Neanderthals': cluster_NT,
-			'Late Pleistocene Homo sapiens': cluster_LPH,}
+			'Pleistocene Homo sapiens': cluster_LPH,}
 		L.control.layers(baseMaps,overlay,{collapsed:false}).addTo(map);
 		
 		// Legend
@@ -373,14 +406,15 @@
 			div.innerHTML +=
 			'<h4>Legend</h1><br>' +
 			'<table><tr style="text-align:center"><th>Age Groups</th><th>Brain</th><th>Body</th></tr>' +
-			'<tr><td style="text-align:left">1 =  10.000-100.000 kya</td><td><img src="markers/noun_Brain_2805277.svg" alt="Brain size 1" width="10" height="10"></td><td><img src="markers/noun_Man_347814.svg" alt="Brain size 1" width="10" height="10"></td></tr>' +
-			'<tr><td style="text-align:left">2 = 100.001-200.000 kya</td><td><img src="markers/noun_Brain_2805277.svg" alt="Brain size 1" width="12" height="12"></td><td><img src="markers/noun_Man_347814.svg" alt="Brain size 1" width="12" height="12"></td></tr>' +
-			'<tr><td style="text-align:left">3 = 200.001-300.000 kya</td><td><img src="markers/noun_Brain_2805277.svg" alt="Brain size 1" width="15" height="15"></td><td><img src="markers/noun_Man_347814.svg" alt="Brain size 1" width="15" height="15"></td></tr>' +
-			'<tr><td style="text-align:left">4 = 300.001-400.000 kya</td><td><img src="markers/noun_Brain_2805277.svg" alt="Brain size 1" width="18" height="18"></td><td><img src="markers/noun_Man_347814.svg" alt="Brain size 1" width="18" height="18"></td></tr>' +
-			'<tr><td style="text-align:left">5 = 400.001-500.000 kya</td><td><img src="markers/noun_Brain_2805277.svg" alt="Brain size 1" width="21" height="21"></td><td><img src="markers/noun_Man_347814.svg" alt="Brain size 1" width="21" height="21"></td></tr>' +
-			'<tr><td style="text-align:left">6 = 500.001-600.000 kya</td><td><img src="markers/noun_Brain_2805277.svg" alt="Brain size 1" width="24" height="24"></td><td><img src="markers/noun_Man_347814.svg" alt="Brain size 1" width="24" height="24"></td></tr>' +
-			'<tr><td style="text-align:left">7 = 600.001-700.000 kya</td><td><img src="markers/noun_Brain_2805277.svg" alt="Brain size 1" width="27" height="27"></td><td><img src="markers/noun_Man_347814.svg" alt="Brain size 1" width="27" height="27"></td></tr>' +
-			'<tr><td style="text-align:left">8 = 700.001-800.000 kya</td><td><img src="markers/noun_Brain_2805277.svg" alt="Brain size 1" width="30" height="30"></td><td><img src="markers/noun_Man_347814.svg" alt="Brain size 1" width="30" height="30"></td></tr>' +
+			'<tr><td style="text-align:left">1 =  10.000-99.999 kya</td><td><img src="markers/noun_Brain_2805277.svg" alt="Brain size 1" width="10" height="10"></td><td><img src="markers/noun_Man_347814.svg" alt="Brain size 1" width="10" height="10"></td></tr>' +
+			'<tr><td style="text-align:left">2 = 100.000-199.999 kya</td><td><img src="markers/noun_Brain_2805277.svg" alt="Brain size 1" width="12" height="12"></td><td><img src="markers/noun_Man_347814.svg" alt="Brain size 1" width="12" height="12"></td></tr>' +
+			'<tr><td style="text-align:left">3 = 200.000-299.999 kya</td><td><img src="markers/noun_Brain_2805277.svg" alt="Brain size 1" width="15" height="15"></td><td><img src="markers/noun_Man_347814.svg" alt="Brain size 1" width="15" height="15"></td></tr>' +
+			'<tr><td style="text-align:left">4 = 300.000-399.999 kya</td><td><img src="markers/noun_Brain_2805277.svg" alt="Brain size 1" width="18" height="18"></td><td><img src="markers/noun_Man_347814.svg" alt="Brain size 1" width="18" height="18"></td></tr>' +
+			'<tr><td style="text-align:left">5 = 400.000-499.999 kya</td><td><img src="markers/noun_Brain_2805277.svg" alt="Brain size 1" width="21" height="21"></td><td><img src="markers/noun_Man_347814.svg" alt="Brain size 1" width="21" height="21"></td></tr>' +
+			'<tr><td style="text-align:left">6 = 500.000-599.999 kya</td><td><img src="markers/noun_Brain_2805277.svg" alt="Brain size 1" width="24" height="24"></td><td><img src="markers/noun_Man_347814.svg" alt="Brain size 1" width="24" height="24"></td></tr>' +
+			'<tr><td style="text-align:left">7 = 600.000-699.999 kya</td><td><img src="markers/noun_Brain_2805277.svg" alt="Brain size 1" width="27" height="27"></td><td><img src="markers/noun_Man_347814.svg" alt="Brain size 1" width="27" height="27"></td></tr>' +
+			'<tr><td style="text-align:left">8 = 700.000-799.999 kya</td><td><img src="markers/noun_Brain_2805277.svg" alt="Brain size 1" width="30" height="30"></td><td><img src="markers/noun_Man_347814.svg" alt="Brain size 1" width="30" height="30"></td></tr>' +
+			'<tr><td style="text-align:left">9 = 800.000-910.000 kya</td><td><img src="markers/noun_Brain_2805277.svg" alt="Brain size 1" width="33" height="33"></td><td><img src="markers/noun_Man_347814.svg" alt="Brain size 1" width="30" height="33"></td></tr>' +
 			'</tr></table>'
 			;
 			
